<resources>
    <string name="app_name">appFitness</string>
    <string name="bmi">BMI</string>
    <string name="tmb">TMB</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="imc_desc">BMI is the acronym for Body Mass Index that serves to assess the weight of the individual in relation to his height and thus indicate if he is within the ideal weight, over or under the desired weight.\n\nFill in the weight and height fields to find out your BMI</string>
    <string name="calc">Calculate</string>
    <string name="fields_message">Os campos devem ser preenchidos e diferente de zero</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">Imc: %1$.2f</string>
    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso</string>
    <string name="calc_removed">Registro removido com sucesso</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="tmb_response">Tmb: %1$.2f</string>
    <string name="list_response">resultado: %1$.2f, data: %2$s</string>
    <string name="delete_message">Você realmente quer excluir o registro?</string>
    <string name="cancel">Cancelar</string>

</resources>