<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:paddingTop="28dp"
                android:src="@drawable/ic_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:paddingTop="19dp"
                android:paddingEnd="10dp"
                android:src="@drawable/header"/>

            <ImageButton
                android:id="@+id/search_image_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingTop="40dp"
                android:src="@drawable/menu" />


        </LinearLayout>

        <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/edit_tmb_weight"
            style="@style/EditTextForm"
            android:hint="@string/weight"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/edit_tmb_height"
            style="@style/EditTextForm"
            android:textColorHint="@color/white"
            android:hint="@string/height" />

        <EditText
            android:id="@+id/edit_tmb_age"
            style="@style/EditTextForm"
            android:textColorHint="@color/white"
            android:hint="@string/age" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_tmb_send"
            style="@style/ButtonForm"
            android:text="@string/calc" />

    </LinearLayout>

</ScrollView>